payment fields in swagger.json
